# assaia-tech-assignment

./: .pre-commit-config.yaml  Dockerfile  game.py  pyproject.toml
.github/workflows/: on_app_update.yml
