[project]
name = "assaia-tech-assignment"
version = "0.1.0"
description = "Assaia Connect 4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.1.2",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.384",
    "ruff>=0.6.9",
]

[tool.ruff]
fix = true
include = ['.pyi']
line-length = 119
show-fixes = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
